# VKVParser

./: CMakeLists.txt  README.md
include/: kv_lexer.cpp  kv_lexer.hpp  kv_node.hpp  kv_parser.cpp  kv_parser.hpp  library.h  shared.hpp
include/VKVParser/: kv_node.hpp  library.h  shared.hpp
src/: kv_lexer.cpp  kv_node.cpp  kv_parser.cpp  library.cpp  main.cpp
